--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,17 +60,16 @@
     <Analyzer Include="D:\Unity\2022.3.48f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\PortalManager.cs" />
     <Compile Include="Assets\ScifiOfficeLite\Scripts\DemoDoor.cs" />
     <Compile Include="Assets\Scripts\InteractiveButton.cs" />
     <Compile Include="Assets\Scripts\InteractiveFeedback.cs" />
     <Compile Include="Assets\Polytope Studio\Lowpoly_Demos\Environment_Free\Helpers\MouseLook.cs" />
     <Compile Include="Assets\Scripts\ObjectsManager.cs" />
     <Compile Include="Assets\Scripts\switchDayNight.cs" />
-    <Compile Include="Assets\PortalManager.cs" />
     <Compile Include="Assets\PlayerControlls.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\ScifiOfficeLite\Scripts\DemoFirstPersonController.cs" />
-    <Compile Include="Assets\Scripts\PlayerTeleport.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
